--- a/index.html
+++ b/index.html
@@ -1,10 +1,128 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
+
 <head>
-   <title></title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Oh My Food</title>
    <link rel="stylesheet" type="text/css" href="styles.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 <body>
-   <h1>Un super titre</h1>
+
+<header class="header">
+   <a href="index.html" class="header__logo">
+      <img src="images/logo/ohmyfood.png" alt="Logo ohmyfood">
+   </a>
+</header>
+
+<section class="intro">
+  <div class="intro__location">
+    <i class="intro__location-icon fa-solid fa-location-dot"></i>
+    <p class="intro__location-text">Paris, Belleville</p>
+  </div>
+
+  <div class="intro__content">
+    <h2 class="intro__title">Réservez le menu qui vous convient</h2>
+    <p class="intro__description">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+    <button class="intro__button">Explorer nos restaurants</button>
+  </div>
+</section>
+
+
+<section class="fonctionnement">
+   <h2 class="fonctionnement__title">Fonctionnement</h2>
+   <div class="fonctionnement__steps">
+
+     <div class="step">
+       <span class="step__number">1</span>
+       <span class="step__icon"><i class="fa-solid fa-mobile-screen-button"></i></span>
+       <p class="step__text">Choisissez un restaurant</p>
+     </div>
+
+     <div class="step">
+       <span class="step__number">2</span>
+       <span class="step__icon"><i class="fa-solid fa-list-ul"></i></span>
+       <p class="step__text">Composez votre menu</p>
+     </div>
+
+     <div class="step">
+       <span class="step__number">3</span>
+       <span class="step__icon"><i class="fa-solid fa-store"></i></span>
+       <p class="step__text">Dégustez au restaurant</p>
+     </div>
+   </div>
+ </section>
+
+ <section class="restaurants">
+   <h2 class="restaurants__title">Restaurants</h2>
+   <div class="restaurants__cards">
+      
+     <article class="restaurant">
+       <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" class="restaurant__image">
+       <div class="restaurant__info">
+         <h3 class="restaurant__name">La palette du goût</h3>
+         <p class="restaurant__location">Ménilmontant</p>
+       </div>
+       <span class="restaurant__heart">
+         <i class="fa-regular fa-heart"></i>
+       </span>
+     </article>
+
+     <article class="restaurant">
+       <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="restaurant__image">
+       <div class="restaurant__info">
+         <h3 class="restaurant__name">La note enchantée</h3>
+         <p class="restaurant__location">Charonne</p>
+       </div>
+       <span class="restaurant__heart">
+         <i class="fa-regular fa-heart"></i>
+       </span>
+     </article>
+
+     <article class="restaurant">
+       <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" class="restaurant__image">
+       <div class="restaurant__info">
+         <h3 class="restaurant__name">À la française</h3>
+         <p class="restaurant__location">Cité Rouge</p>
+       </div>
+       <span class="restaurant__heart">
+         <i class="fa-regular fa-heart"></i>
+       </span>
+     </article>
+
+     <article class="restaurant">
+       <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens" class="restaurant__image">
+       <div class="restaurant__info">
+         <h3 class="restaurant__name">Le délice des sens</h3>
+         <p class="restaurant__location">Folie-Méricourt</p>
+       </div>
+       <span class="restaurant__heart">
+         <i class="fa-regular fa-heart"></i>
+       </span>
+     </article>
+
+   </div>
+ </section>
+
+ <footer class="footer">
+   <div class="footer__logo">
+     <h2>ohmyfood</h2>
+   </div>
+   <div class="footer__menu">
+     <p class="footer__item"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</p>
+     <p class="footer__item"><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</p>
+     <p class="footer__item">Mentions légales</p>
+     <p class="footer__item">Contact</p>
+   </div>
+ </footer>
+ 
+
 </body>
 </html>
