--- a/menu-le-delice-des-sens.html
+++ b/menu-le-delice-des-sens.html
@@ -2,9 +2,14 @@
 <html lang="fr">
 <head>
    <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Le délice des sens</title>
-   <link rel="stylesheet" type="text/css" href="menu.scss">
+   <link rel="stylesheet" type="text/css" href="css/menu.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -15,6 +20,8 @@
   <a href="index.html" class="header__logo">
     <img src="images/logo/ohmyfood.png" alt="Logo ohmyfood">
   </a>
+  <div>
+  </div>
 </header>
 
 <div class="menu__img">
