--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -29,7 +29,7 @@
 </div>
 
 <div class="menu__info">
-  <h3 class="menu__name">>À la française</h3>
+  <h3 class="menu__name">À la française</h3>
   <span class="menu__heart">
     <i class="fa-regular fa-heart"></i>
   </span>
@@ -40,20 +40,26 @@
     <div class="menu__list">
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Tartare de poulpe acidulé</h5>
         <p class="menu__item-description">Aux zestes d'orange</p>
+        </div>
         <span class="menu__item-price">25€</span>
       </article>
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Velouté de légumes d'antan</h5>
         <p class="menu__item-description">Carotte, panais, topinambour</p>
+        </div>
         <span class="menu__item-price">35€</span>
       </article>
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Soupe à l'oignon</h5>
         <p class="menu__item-description">Revisitée</p>
+        </div>
         <span class="menu__item-price">20€</span>
       </article>
     </div>
@@ -64,20 +70,26 @@
     <div class="menu__list">
 
       <article class="menu__item">
-        <h5 class="menu__item-name">Coquilles Saint-Jacques</h5>
-        <p class="menu__item-description">Accompagnées d'une purée de panais</p>
+        <div>
+          <h5 class="menu__item-name">Coquilles Saint-Jacques</h5>
+          <p class="menu__item-description">Accompagnées d'une purée de panais</p>
+        </div>
         <span class="menu__item-price">40€</span>
       </article>
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Magret de canard</h5>
         <p class="menu__item-description">Et parmentier de pommes de terre</p>
+        </div>
         <span class="menu__item-price">35€</span>
       </article>
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Pigeonneau d’Ille-et-Vilaine</h5>
         <p class="menu__item-description">Sur son lit de gnocchis aux légumes</p>
+        </div>
         <span class="menu__item-price">44€</span>
       </article>
     </div>
@@ -88,20 +100,26 @@
     <div class="menu__list">
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Pétales de violettes glacés</h5>
         <p class="menu__item-description">Et purée de noisettes</p>
+        </div>
         <span class="menu__item-price">18€</span>
       </article>
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Fondant au chocolat</h5>
         <p class="menu__item-description">Revisité</p>
+        </div>
         <span class="menu__item-price">22€</span>
       </article>
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Millefeuille croustillant</h5>
         <p class="menu__item-description">Myrtilles et pâte d’amande</p>
+        </div>
         <span class="menu__item-price">23€</span>
       </article>
     </div>
