--- a/menu-la-note-enchantee.html
+++ b/menu-la-note-enchantee.html
@@ -40,26 +40,34 @@
     <div class="menu__list">
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Ravioles de foie gras</h5>
         <p class="menu__item-description">Accompagnées de leur crème à la truffe</p>
+        </div>
         <span class="menu__item-price">25€</span>
       </article>
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Caviar osciètre</h5>
         <p class="menu__item-description">Sur blini à la farine de blé noir</p>
+        </div>
         <span class="menu__item-price">35€</span>
       </article>
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Homard et espuma de potiron</h5>
         <p class="menu__item-description">Marinés aux zestes d'orange</p>
+        </div>
         <span class="menu__item-price">20€</span>
       </article>
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Foie gras de canard cuit entier</h5>
         <p class="menu__item-description">Confiture de figue et pain toasté</p>
+        </div>
         <span class="menu__item-price">35€</span>
       </article>
     </div>
@@ -70,20 +78,26 @@
     <div class="menu__list">
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Noix de coquilles Saint-Jacques</h5>
         <p class="menu__item-description">Sur lit de purée de céleri-rave</p>
+        </div>
         <span class="menu__item-price">40€</span>
       </article>
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Langoustine poêlée</h5>
         <p class="menu__item-description">Purée de patate douce</p>
+        </div>
         <span class="menu__item-price">35€</span>
       </article>
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Mijoté de queue de bœuf</h5>
         <p class="menu__item-description">Et riz sauvage aux zestes de citron</p>
+        </div>
         <span class="menu__item-price">44€</span>
       </article>
     </div>
@@ -94,20 +108,26 @@
     <div class="menu__list">
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Macaron noisette et chocolat</h5>
         <p class="menu__item-description">Glace au caramel brun et sel de Guérande</p>
+        </div>
         <span class="menu__item-price">18€</span>
       </article>
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Baba au rhum revisité</h5>
         <p class="menu__item-description">Avec son coulis de citron</p>
+        </div>
         <span class="menu__item-price">22€</span>
       </article>
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Tarte au citron meringuée</h5>
         <p class="menu__item-description">Déstructurée</p>
+        </div>
         <span class="menu__item-price">23€</span>
       </article>
     </div>
