--- a/menu-la-palette-du-gout.html
+++ b/menu-la-palette-du-gout.html
@@ -40,20 +40,26 @@
     <div class="menu__list">
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Fricassée d'escargots</h5>
         <p class="menu__item-description">Au piment d'Espelette</p>
+        </div>
         <span class="menu__item-price">25€</span>
       </article>
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Foie gras de canard mi-cuit</h5>
         <p class="menu__item-description">Et ses copeaux de truffe noire</p>
+        </div>
         <span class="menu__item-price">35€</span>
       </article>
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Œuf au plat</h5>
         <p class="menu__item-description">Assaisonné à la truffe sur lit de caviar</p>
+        </div>
         <span class="menu__item-price">20€</span>
       </article>
     </div>
@@ -64,20 +70,26 @@
     <div class="menu__list">
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Filet de bœuf aux herbes</h5>
         <p class="menu__item-description">Accompagné de sa ribambelle de légumes</p>
+        </div>
         <span class="menu__item-price">40€</span>
       </article>
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Parmentier de queue de bœuf</h5>
         <p class="menu__item-description">À la truffe noire sur sa purée de panais</p>
+        </div>
         <span class="menu__item-price">35€</span>
       </article>
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Filet de turbot</h5>
         <p class="menu__item-description">Aux agrumes</p>
+        </div>
         <span class="menu__item-price">44€</span>
       </article>
     </div>
@@ -88,20 +100,26 @@
     <div class="menu__list">
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Paris-Brest</h5>
         <p class="menu__item-description">Revisité</p>
+        </div>
         <span class="menu__item-price">18€</span>
       </article>
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Macaron au chocolat d'exception</h5>
         <p class="menu__item-description">Et glace à la vanille de Madagascar</p>
+        </div>
         <span class="menu__item-price">22€</span>
       </article>
 
       <article class="menu__item">
+        <div>
         <h5 class="menu__item-name">Mousse au chocolat</h5>
         <p class="menu__item-description">Au piment d'Espelette et à la truffe noire</p>
+        </div>
         <span class="menu__item-price">23€</span>
       </article>
     </div>
