--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -41,34 +41,37 @@
   <div class="menu__list">
 
     <article class="menu__item">
-      <div>
+      <div class="menu__main">
         <h5 class="menu__item-name">Œuf mollet</h5>
         <p class="menu__item-description">Et sa purée de panais</p>
       </div>
+      <div class="menu__item-price">15€
+      </div>
       <div class="menu__item-check">
-        <span class="menu__item-price">15€</span>
         <i class="fa-solid fa-circle-check"></i>
       </div>
     </article>
 
     <article class="menu__item">
-      <div>
+      <div class="menu__main">
         <h5 class="menu__item-name">Velouté de légumes d’antan</h5>
         <p class="menu__item-description">Carotte, panais, topinambour</p>
       </div>
+      <div class="menu__item-price">20€
+      </div>
       <div class="menu__item-check">
-        <span class="menu__item-price">20€</span>
         <i class="fa-solid fa-circle-check"></i>
       </div>
     </article>
 
     <article class="menu__item">
-      <div>
+      <div class="menu__main">
         <h5 class="menu__item-name">Soupe à l’oignon</h5>
         <p class="menu__item-description">Revisitée</p>
       </div>
+      <div class="menu__item-price">15€
+      </div>
       <div class="menu__item-check">
-        <span class="menu__item-price">15€</span>
         <i class="fa-solid fa-circle-check"></i>
       </div>
     </article>
@@ -82,34 +85,37 @@
   <div class="menu__list">
 
     <article class="menu__item">
-      <div>
+      <div class="menu__main">
         <h5 class="menu__item-name">Coquilles Saint-Jacques</h5>
         <p class="menu__item-description">Accompagnées d’une purée de panais</p>
       </div>
+      <div class="menu__item-price">40€
+      </div>
       <div class="menu__item-check">
-        <span class="menu__item-price">40€</span>
         <i class="fa-solid fa-circle-check"></i>
       </div>
     </article>
 
     <article class="menu__item">
-      <div>
+      <div class="menu__main">
         <h5 class="menu__item-name">Magret de canard</h5>
         <p class="menu__item-description">Et parmentier de pommes de terre</p>
       </div>
+      <div class="menu__item-price">35€
+      </div>
       <div class="menu__item-check">
-        <span class="menu__item-price">35€</span>
         <i class="fa-solid fa-circle-check"></i>
       </div>
     </article>
 
     <article class="menu__item">
-      <div>
+      <div class="menu__main">
         <h5 class="menu__item-name">Pigeonneau d’Ille-et-Vilaine</h5>
         <p class="menu__item-description">Sur son lit de gnocchis aux légumes</p>
       </div>
+      <div class="menu__item-price">44€
+      </div>
       <div class="menu__item-check">
-        <span class="menu__item-price">44€</span>
         <i class="fa-solid fa-circle-check"></i>
       </div>
     </article>
@@ -122,34 +128,37 @@
   <div class="menu__list">
 
     <article class="menu__item">
-      <div>
+      <div class="menu__main">
         <h5 class="menu__item-name">Pétales de violettes glacés</h5>
         <p class="menu__item-description">Et purée de noisettes</p>
       </div>
+      <div class="menu__item-price">18€
+      </div>
       <div class="menu__item-check">
-        <span class="menu__item-price">18€</span>
         <i class="fa-solid fa-circle-check"></i>
       </div>
     </article>
 
     <article class="menu__item">
-      <div>
+      <div class="menu__main">
         <h5 class="menu__item-name">Fondant au chocolat</h5>
         <p class="menu__item-description">Revisité</p>
       </div>
+      <div class="menu__item-price">22€
+      </div>
       <div class="menu__item-check">
-        <span class="menu__item-price">22€</span>
         <i class="fa-solid fa-circle-check"></i>
       </div>
     </article>
 
     <article class="menu__item">
-      <div>
+      <div class="menu__main">
         <h5 class="menu__item-name">Millefeuille croustillant</h5>
         <p class="menu__item-description">Myrtilles et pâte d’amande</p>
       </div>
+      <div class="menu__item-price">23€
+      </div>
       <div class="menu__item-check">
-        <span class="menu__item-price">23€</span>
         <i class="fa-solid fa-circle-check"></i>
       </div>
     </article>
