--- a/menu-le-delice-des-sens.html
+++ b/menu-le-delice-des-sens.html
@@ -41,34 +41,37 @@
     <div class="menu__list">
   
       <article class="menu__item">
-        <div>
+        <div class="menu__main">
           <h5 class="menu__item-name">Tartare de thon</h5>
           <p class="menu__item-description">Assaisonné au yuzu</p>
         </div>
+        <div class="menu__item-price">25€
+        </div>
         <div class="menu__item-check">
-          <span class="menu__item-price">25€</span>
           <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
   
       <article class="menu__item">
-        <div>
+        <div class="menu__main">
           <h5 class="menu__item-name">Bouchée de homard croustillant</h5>
           <p class="menu__item-description">Et sa farandole de petits légumes</p>
         </div>
+        <div class="menu__item-price">35€
+        </div>
         <div class="menu__item-check">
-          <span class="menu__item-price">35€</span>
           <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
   
       <article class="menu__item">
-        <div>
+        <div class="menu__main">
           <h5 class="menu__item-name">Velouté de cèpes</h5>
           <p class="menu__item-description">Aux truffes</p>
         </div>
+        <div class="menu__item-price">20€
+        </div>
         <div class="menu__item-check">
-          <span class="menu__item-price">20€</span>
           <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
@@ -82,34 +85,37 @@
     <div class="menu__list">
   
       <article class="menu__item">
-        <div>
+        <div class="menu__main">
           <h5 class="menu__item-name">Poulet rôti aux herbes de Provence</h5>
           <p class="menu__item-description">Et sa crème de truffe</p>
         </div>
+        <div class="menu__item-price">40€
+        </div>
         <div class="menu__item-check">
-          <span class="menu__item-price">40€</span>
           <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
   
       <article class="menu__item">
-        <div>
+        <div class="menu__main">
           <h5 class="menu__item-name">Langouste rôtie</h5>
           <p class="menu__item-description">Et ses légumes de saison</p>
         </div>
+        <div class="menu__item-price">35€
+        </div>
         <div class="menu__item-check">
-          <span class="menu__item-price">35€</span>
           <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
   
       <article class="menu__item">
-        <div>
+        <div class="menu__main">
           <h5 class="menu__item-name">Côte de bœuf Angus</h5>
           <p class="menu__item-description">Et sa purée de panais</p>
         </div>
+        <div class="menu__item-price">44€
+        </div>
         <div class="menu__item-check">
-          <span class="menu__item-price">44€</span>
           <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
@@ -123,34 +129,37 @@
     <div class="menu__list">
   
       <article class="menu__item">
-        <div>
+        <div class="menu__main">
           <h5 class="menu__item-name">Farandole de desserts</h5>
           <p class="menu__item-description">Du chef</p>
         </div>
+        <div class="menu__item-price">18€
+        </div>
         <div class="menu__item-check">
-          <span class="menu__item-price">18€</span>
           <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
   
       <article class="menu__item">
-        <div>
+        <div class="menu__main">
           <h5 class="menu__item-name">Crème brulée</h5>
           <p class="menu__item-description">Revisitée</p>
         </div>
+        <div class="menu__item-price">22€
+        </div>
         <div class="menu__item-check">
-          <span class="menu__item-price">22€</span>
           <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
   
       <article class="menu__item">
-        <div>
+        <div class="menu__main">
           <h5 class="menu__item-name">Tiramisu</h5>
           <p class="menu__item-description">À la noisette</p>
         </div>
+        <div class="menu__item-price">23€
+        </div>
         <div class="menu__item-check">
-          <span class="menu__item-price">23€</span>
           <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
