modif html la note enchantée

--- a/menu-la-note-enchantee.html
+++ b/menu-la-note-enchantee.html
@@ -39,46 +39,51 @@
   <div class="menu__category">
     <h4 class="menu__category-title">ENTRÉES</h4>
     <div class="menu__list">
+
       <article class="menu__item">
-        <div>
+        <div class="menu__main">
           <h5 class="menu__item-name">Ravioles de foie gras</h5>
           <p class="menu__item-description">Accompagnées de leur crème à la truffe</p>
         </div>
+        <div class="menu__item-price">25€
+        </div>
         <div class="menu__item-check">
-          <span class="menu__item-price">25€</span>
           <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
 
       <article class="menu__item">
-        <div>
+        <div class="menu__main">
           <h5 class="menu__item-name">Caviar osciètre</h5>
           <p class="menu__item-description">Sur blini à la farine de blé noir</p>
         </div>
+        <div class="menu__item-price">35€
+        </div>
         <div class="menu__item-check">
-          <span class="menu__item-price">35€</span>
           <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
 
       <article class="menu__item">
-        <div>
+        <div class="menu__main">
           <h5 class="menu__item-name">Homard et espuma de potiron</h5>
           <p class="menu__item-description">Marinés aux zestes d'orange</p>
         </div>
+        <div class="menu__item-price">20€
+        </div>
         <div class="menu__item-check">
-          <span class="menu__item-price">20€</span>
           <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
 
       <article class="menu__item">
-        <div>
+        <div class="menu__main">
           <h5 class="menu__item-name">Foie gras de canard cuit entier</h5>
           <p class="menu__item-description">Confiture de figue et pain toasté</p>
         </div>
+        <div class="menu__item-price">35€
+        </div>
         <div class="menu__item-check">
-          <span class="menu__item-price">35€</span>
           <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
@@ -88,35 +93,39 @@
   <div class="menu__category">
     <h4 class="menu__category-title">PLATS</h4>
     <div class="menu__list">
+
       <article class="menu__item">
-        <div>
+        <div class="menu__main">
           <h5 class="menu__item-name">Noix de coquilles Saint-Jacques</h5>
           <p class="menu__item-description">Sur lit de purée de céleri-rave</p>
         </div>
+        <div class="menu__item-price">40€
+        </div>
         <div class="menu__item-check">
-          <span class="menu__item-price">40€</span>
           <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
 
       <article class="menu__item">
-        <div>
+        <div class="menu__main">
           <h5 class="menu__item-name">Langoustine poêlée</h5>
           <p class="menu__item-description">Purée de patate douce</p>
         </div>
+        <div class="menu__item-price">35€
+        </div>
         <div class="menu__item-check">
-          <span class="menu__item-price">35€</span>
           <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
 
       <article class="menu__item">
-        <div>
+        <div class="menu__main">
           <h5 class="menu__item-name">Mijoté de queue de bœuf</h5>
           <p class="menu__item-description">Et riz sauvage aux zestes de citron</p>
         </div>
+        <div class="menu__item-price">44€
+        </div>
         <div class="menu__item-check">
-          <span class="menu__item-price">44€</span>
           <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
@@ -126,35 +135,39 @@
   <div class="menu__category">
     <h4 class="menu__category-title">DESSERTS</h4>
     <div class="menu__list">
+
       <article class="menu__item">
-        <div>
+        <div class="menu__main">
           <h5 class="menu__item-name">Macaron noisette et chocolat</h5>
           <p class="menu__item-description">Glace au caramel brun et sel de Guérande</p>
         </div>
+        <div class="menu__item-price">18€
+        </div>
         <div class="menu__item-check">
-          <span class="menu__item-price">18€</span>
           <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
 
       <article class="menu__item">
-        <div>
+        <div class="menu__main">
           <h5 class="menu__item-name">Baba au rhum revisité</h5>
           <p class="menu__item-description">Avec son coulis de citron</p>
         </div>
+        <div class="menu__item-price">22€
+        </div>
         <div class="menu__item-check">
-          <span class="menu__item-price">22€</span>
           <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
 
       <article class="menu__item">
-        <div>
+        <div class="menu__main">
           <h5 class="menu__item-name">Tarte au citron meringuée</h5>
           <p class="menu__item-description">Déstructurée</p>
         </div>
+        <div class="menu__item-price">23€
+        </div>
         <div class="menu__item-check">
-          <span class="menu__item-price">23€</span>
           <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
