--- a/menu-la-palette-du-gout.html
+++ b/menu-la-palette-du-gout.html
@@ -41,38 +41,40 @@
   <div class="menu__list">
 
     <article class="menu__item">
-      <div>
+      <div class="menu__main">
         <h5 class="menu__item-name">Fricassée d'escargots</h5>
         <p class="menu__item-description">Au piment d'Espelette</p>
       </div>
+      <div class="menu__item-price">25€
+      </div>
       <div class="menu__item-check">
-        <span class="menu__item-price">25€</span>
         <i class="fa-solid fa-circle-check"></i>
       </div>
     </article>
 
     <article class="menu__item">
-      <div>
+      <div class="menu__main">
         <h5 class="menu__item-name">Foie gras de canard mi-cuit</h5>
         <p class="menu__item-description">Et ses copeaux de truffe noire</p>
       </div>
+      <div class="menu__item-price">35€
+      </div>
       <div class="menu__item-check">
-        <span class="menu__item-price">35€</span>
         <i class="fa-solid fa-circle-check"></i>
       </div>
     </article>
 
     <article class="menu__item">
-      <div>
+      <div class="menu__main">
         <h5 class="menu__item-name">Œuf au plat</h5>
         <p class="menu__item-description">Assaisonné à la truffe sur lit de caviar</p>
       </div>
+      <div class="menu__item-price">20€
+      </div>
       <div class="menu__item-check">
-        <span class="menu__item-price">20€</span>
         <i class="fa-solid fa-circle-check"></i>
       </div>
     </article>
-
   </div>
 </div>
   
@@ -81,34 +83,37 @@
   <div class="menu__list">
 
     <article class="menu__item">
-      <div>
+      <div class="menu__main">
         <h5 class="menu__item-name">Filet de bœuf aux herbes</h5>
         <p class="menu__item-description">Accompagné de sa ribambelle de légumes</p>
       </div>
+      <div class="menu__item-price">40€
+      </div>
       <div class="menu__item-check">
-        <span class="menu__item-price">40€</span>
         <i class="fa-solid fa-circle-check"></i>
       </div>
     </article>
 
     <article class="menu__item">
-      <div>
+      <div class="menu__main">
         <h5 class="menu__item-name">Parmentier de queue de bœuf</h5>
         <p class="menu__item-description">À la truffe noire sur sa purée de panais</p>
       </div>
+      <div class="menu__item-price">35€
+      </div>
       <div class="menu__item-check">
-        <span class="menu__item-price">35€</span>
         <i class="fa-solid fa-circle-check"></i>
       </div>
     </article>
 
     <article class="menu__item">
-      <div>
+      <div class="menu__main">
         <h5 class="menu__item-name">Filet de turbot</h5>
         <p class="menu__item-description">Aux agrumes</p>
       </div>
+      <div class="menu__item-price">44€
+      </div>
       <div class="menu__item-check">
-        <span class="menu__item-price">44€</span>
         <i class="fa-solid fa-circle-check"></i>
       </div>
     </article>
@@ -121,34 +126,37 @@
   <div class="menu__list">
 
     <article class="menu__item">
-      <div>
+      <div class="menu__main">
         <h5 class="menu__item-name">Paris-Brest</h5>
         <p class="menu__item-description">Revisité</p>
       </div>
+      <div class="menu__item-price">18€
+      </div>
       <div class="menu__item-check">
-        <span class="menu__item-price">18€</span>
         <i class="fa-solid fa-circle-check"></i>
       </div>
     </article>
 
     <article class="menu__item">
-      <div>
+      <div class="menu__main">
         <h5 class="menu__item-name">Macaron au chocolat d'exception</h5>
         <p class="menu__item-description">Et glace à la vanille de Madagascar</p>
       </div>
+      <div class="menu__item-price">22€
+      </div>
       <div class="menu__item-check">
-        <span class="menu__item-price">22€</span>
         <i class="fa-solid fa-circle-check"></i>
       </div>
     </article>
 
     <article class="menu__item">
-      <div>
+      <div class="menu__main">
         <h5 class="menu__item-name">Mousse au chocolat</h5>
         <p class="menu__item-description">Au piment d'Espelette et à la truffe noire</p>
       </div>
+      <div class="menu__item-price">23€
+      </div>
       <div class="menu__item-check">
-        <span class="menu__item-price">23€</span>
         <i class="fa-solid fa-circle-check"></i>
       </div>
     </article>
