correction footer index html et css

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
 
+<div class="main">
 <header class="header">
    <a href="index.html" class="header__logo">
       <img src="images/logo/ohmyfood.png" alt="Logo ohmyfood">
@@ -122,6 +123,7 @@
 
    </div>
  </section>
+</div>
 
  <footer class="footer">
    <div class="footer__logo">
