ajout loader fini

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 </head>
 <body>
 
+  <div class="loader">
+    <div class="loader-circle"></div>
+  </div>
+
 <div class="main">
 <header class="header">
    <a href="index.html" class="header__logo">
